tests/conformance/syntax/positive/opposite_notation_valid.ditt
module Syntax.OppositeNotation where

postulate C : Cat
id_op (x : C^) : C^ = x
