tests/conformance/syntax/negative/duplicate_top_level_invalid.ditt
module Syntax.DuplicateTopLevelBad where

postulate C : Cat
id (x : C) : C = x
id (x : C) : C = x
